chainsaw-http-deploy.yaml
# DO NOT EDIT: This file is autogenerated by cargo-make
---
# Source: chainsaw-http/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: chainsaw-http
  labels:
    helm.sh/chart: chainsaw-http-0.1.0
    app: chainsaw-http
    version: "1.16.0"
    app.kubernetes.io/name: chainsaw-http
    app.kubernetes.io/instance: chainsaw-http
    app: chainsaw-http
    version: "1.16.0"
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  type: ClusterIP
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
      name: http
  selector:
    app: chainsaw-http
    version: "1.16.0"
    app.kubernetes.io/name: chainsaw-http
    app.kubernetes.io/instance: chainsaw-http
---
# Source: chainsaw-http/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chainsaw-http
  labels:
    helm.sh/chart: chainsaw-http-0.1.0
    app: chainsaw-http
    version: "1.16.0"
    app.kubernetes.io/name: chainsaw-http
    app.kubernetes.io/instance: chainsaw-http
    app: chainsaw-http
    version: "1.16.0"
    app.kubernetes.io/version: "1.16.0"
    app.kubernetes.io/managed-by: Helm
spec:
  replicas: 1
  selector:
    matchLabels:
      app: chainsaw-http
      version: "1.16.0"
      app.kubernetes.io/name: chainsaw-http
      app.kubernetes.io/instance: chainsaw-http
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "3000"
        prometheus.io/scrape: "true"
      labels:
        app: chainsaw-http
        version: "1.16.0"
        app.kubernetes.io/name: chainsaw-http
        app.kubernetes.io/instance: chainsaw-http
    spec:
      serviceAccountName: chainsaw-http
      securityContext:
        {}
      containers:
        - name: chainsaw-http
          securityContext:
            {}
          image: "local-dev-registry:64541/chainsaw/demo-http:latest"
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          resources:
            {}
---
# Source: chainsaw-http/templates/istio-gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: chainsaw-http
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
# Source: chainsaw-http/templates/istio-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: chainsaw-http
spec:
  hosts:
  - "*"
  gateways:
  - chainsaw-http
  http:
  - match:
    - uri:
        exact: /metrics
    - uri:
        prefix: /chainsaw/
    route:
    - destination:
        host: chainsaw-http
        port:
          number: 3000
